--- a/index.html
+++ b/index.html
@@ -15,43 +15,47 @@
   </head>
   <body>
     <main>
-      <div>
-        <div>
+      <div class="container section">
+        <div class="section-header">
           <h1>
-            Reliable, efficient delivery <span>Powered by Technology</span>
+            <span>Reliable, efficient delivery</span> Powered by Technology
           </h1>
           <p>
             Our Artificial Intelligence powered tools use millions of project
             data points to ensure that your project is successful
           </p>
         </div>
-        <div>
-          <div>
+        <div class="card-center">
+          <div class="card card-1">
             <h2>Supervisor</h2>
             <p>Monitors activity to identify project roadblocks</p>
-            <img src="./images/icon-supervisor.svg" alt="" />
+            <img class="card-logo" src="./images/icon-supervisor.svg" alt="" />
           </div>
-          <div>
-            <div>
+          <div class="special-cards">
+            <div class="card card-2">
               <h2>Team Builder</h2>
               <p>
                 Scans our talent network to create the optimal team for your
                 project
               </p>
-              <img src="./images/icon-team-builder.svg" alt="" />
+              <img
+                class="card-logo"
+                src="./images/icon-team-builder.svg"
+                alt=""
+              />
             </div>
-            <div>
+            <div class="card card-3">
               <h2>Karma</h2>
               <p>Regularly evaluates our talent to ensure quality</p>
-              <img src="./images/icon-karma.svg" alt="" />
+              <img class="card-logo" src="./images/icon-karma.svg" alt="" />
             </div>
           </div>
-          <div>
+          <div class="card card-4">
             <h2>Calculator</h2>
             <p>
               Uses data from past projects to provide better delivery estimates
             </p>
-            <img src="./images/icon-calculator.svg" alt="" />
+            <img class="card-logo" src="./images/icon-calculator.svg" alt="" />
           </div>
         </div>
       </div>
