--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <main>
+      <!-- section -->
       <div class="container section">
+        <!-- header of section -->
         <div class="section-header">
           <h1>
             <span>Reliable, efficient delivery</span> Powered by Technology
@@ -25,13 +27,18 @@
             data points to ensure that your project is successful
           </p>
         </div>
+        <!-- cards -->
         <div class="card-center">
+          <!-- card 1 -->
           <div class="card-1">
             <h2>Supervisor</h2>
             <p>Monitors activity to identify project roadblocks</p>
             <img class="card-logo" src="./images/icon-supervisor.svg" alt="" />
           </div>
+          <!-- end of card 1 -->
+          <!-- group of cards -->
           <div class="special-cards">
+            <!-- card 2 -->
             <div class="card-2">
               <h2>Team Builder</h2>
               <p>
@@ -44,12 +51,17 @@
                 alt=""
               />
             </div>
+            <!-- end of card 2 -->
+            <!-- card 3 -->
             <div class="card-3">
               <h2>Karma</h2>
               <p>Regularly evaluates our talent to ensure quality</p>
               <img class="card-logo" src="./images/icon-karma.svg" alt="" />
             </div>
+            <!-- end of card 3 -->
           </div>
+          <!-- end of group of cards -->
+          <!-- card 4 -->
           <div class="card-4">
             <h2>Calculator</h2>
             <p>
@@ -57,15 +69,19 @@
             </p>
             <img class="card-logo" src="./images/icon-calculator.svg" alt="" />
           </div>
+          <!-- card 4 -->
+          <!-- end of card 4 -->
         </div>
       </div>
     </main>
+    <!-- footer -->
     <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://github.com/amirhazizi">Amir Hossein Azizi</a>.
       </p>
     </footer>
   </body>
